	* control.d (make_variable_frame): Fix pushSTACK_symbolwithflags
	invocation.

2018-01-13  Bruno Haible  <bruno@clisp.org>

	Print frame pointers as #<FRAME-POINTER nn> also in HEAPCODES model.
	* io.d (prin_object_dispatch_low) [HEAPCODES]: For a frame pointer,
	invoke pr_framepointer, not pr_machine.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/s390x.
	* Makefile.devel (multibuild-linux-s390x): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/s390x, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/s390.
	* Makefile.devel (multibuild-linux-s390): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/s390, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/ia64.
	* Makefile.devel (multibuild-linux-ia64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/ia64, enable all optimizations
	except ASM.

2018-01-13  Bruno Haible  <bruno@clisp.org>

	Improve framepointerp in GENERIC64C_HEAPCODES model.
	* lispbibl.d (framepointerp) [GENERIC64C_HEAPCODES]: Correct bit mask.

2018-01-13  Bruno Haible  <bruno@clisp.org>

	Improve the quality of SXHASH on instances of STANDARD-STABLEHASH and
	STRUCTURE-STABLEHASH.
	Suggested by Sam Steingold.
	* hashtabl.d (sxhash_clause2): Renamed from sxhash.
	(sxhash): New function.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on GNU/kFreeBSD/x86_64.
	* Makefile.devel (multibuild-freebsd-gnu-x86_64): Enable all build
	variants.
	* makemake.in (XCFLAGS): For GNU/kFreeBSD/x86_64, enable all
	optimizations except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/sparc64.
	* Makefile.devel (multibuild-linux-sparc64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/sparc64, enable all optimizations
	except ASM.
